# wprowadzeniedosiecineuronowych

./: pyproject.toml
ml4/: Exercices_knn.ipynb
ml5/: k-means_exercises.ipynb
ml6/: check_columns.py  logistic_regression.ipynb  regression.ipynb
ssn1/: lab_introduction.ipynb  main.py  pyproject.toml
ssn3/: snum_lab_pytorch.ipynb
ssn4/: snum_lab_networks_pytorch.ipynb
ssn5/: snum_lab_regularization_and_autoencoders_pytorch.ipynb
zadanie1/: main.ipynb
